Fixed the navbar hiding on smaller screens when pressing drop down menu

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -40,7 +40,8 @@ main {
     width: 100%;
     top: 0;
     z-index: 1000;
-    height: 70px;
+    min-height: 70px;
+    height: auto;
 }
 
 #navbar .nav-link {
